--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,8 @@ psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 pytz==2024.1
 gunicorn==21.2.0
-eventlet==0.33.3
+gevent==24.2.1 
+gevent-websocket==0.10.1 
+
+
+
