--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ psycopg2-binary==2.9.9
 python-dateutil==2.8.2
 pytz==2024.1
 gunicorn==21.2.0
-eventlet==0.36.1 
+eventlet==0.36.1
+langgraph-checkpoint-sqlite==3.0.1 
+ 
 
 
 
