--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ pytz==2024.1
 gunicorn==21.2.0
 eventlet==0.36.1
 langgraph-checkpoint-sqlite==3.0.1 
- 
+langgraph-checkpoint-postgres==3.0.2 
+
+
 
 
 
