--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ langchain-core==1.2.7
 langgraph==1.0.6
 openai>=1.54.0
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.1 
 python-dateutil==2.8.2
 pytz==2024.1
 gunicorn==21.2.0
