--- a/requirements.txt
+++ b/requirements.txt
@@ -9,18 +9,11 @@ langchain-core==1.2.7
 langgraph==1.0.6
 openai>=1.54.0
 python-dotenv==1.0.0
-psycopg[binary]==3.2.1 
+psycopg[binary]>=3.2.1
+psycopg-pool>=3.2.0
 python-dateutil==2.8.2
 pytz==2024.1
 gunicorn==21.2.0
 eventlet==0.36.1
 langgraph-checkpoint-sqlite==3.0.1 
-langgraph-checkpoint-postgres==3.0.2 
-
-
-
-
-
-
-
-
+langgraph-checkpoint-postgres==3.0.2
