--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ psycopg-pool>=3.2.0
 python-dateutil==2.8.2
 pytz==2024.1
 gunicorn==21.2.0
-eventlet==0.36.1
+eventlet>=0.37.0 
 langgraph-checkpoint-sqlite==3.0.1 
 langgraph-checkpoint-postgres==3.0.2
